--- a/tool/css/style.css
+++ b/tool/css/style.css
@@ -615,7 +615,7 @@ small a {
     border: 1px solid #F8694A;
 }
 .view-btn a {
-    background: #E9ECEF;
+    background: #fff;
     display: inline-block;
     text-align: center;
     color: #30323A;
