--- a/tool/css/style.css
+++ b/tool/css/style.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700');
 
 * {
-    margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 a:hover {
