--- a/tool/css/style.css
+++ b/tool/css/style.css
@@ -943,7 +943,7 @@ td.hidden {
     background: #E7E8EA;
     border-bottom: 1px solid #F8694A;
 }
-tr.clickable-row
+.clickable-row, .clickable-div
 {
     cursor: pointer;
 }
@@ -953,29 +953,17 @@ tr.clickable-row
     border: none !important;
     padding-left: 0;
 }
-/*================
-COLOR CSS
-================= */
 
-/* .hearder-top,.lname a,.btn-login,.ic-cart a,.menu ul li:hover a,.fq,.widget ul li a:hover,.single-header-a,.single-header-a span a, .single-header-u span a,.admin-search button,.user-menu ul li a:hover 
-{
-    color: #dd4b39;
-}
-
-button#ctg,.btn-login:hover,.slider-area .owl-dots div.active,span.sb input[type="submit"],.btn-buy,.my-btn,.my-btn:hover,.book-details a,.addto-cart a,.view-btn a:hover,.admin-menu ul li:hover,.admin-search button:hover,#addto-cart a,#book-details a
-{
-    background-color: #dd4b39;
+/*=== Admin Index ===*/
+.col-admin {
+    color: #fff;
+    padding: 10px;
+    width: 150px;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
-.single-book:hover,.view-btn a,#single-book:hover,.my-btn,span input[type="search"],.btn-login,.ic-cart a
-{
-    border: 1px solid #dd4b39;
+.col-admin h6 {
+    color: #fff;
 }
-.slide-text h2,.hearder-top,.single-header-a
-{
-  border-bottom: 1px solid #dd4b39;   
-}
-.slide-text h2
-{
-  border-top: 1px solid #dd4b39;   
-} */
