Remove and add stock status
1. Remove direct quantity view from users book details

2. Add stock status at admin book details.

3. Upgrade admin index page. Give link to all.

4. Fix a design bug at add user page

5. Give min height at ctg_view page

--- a/tool/css/style.css
+++ b/tool/css/style.css
@@ -962,12 +962,16 @@ td.hidden {
     font-size: 30px;
     text-align: center;
     margin-bottom: 8px;
+    transition: .3s;
 }
 
 .col-admin h6 {
     color: #fff;
 }
-
+.clickable-div:hover
+{
+    background-color: #F8694A !important;
+}
 
 /*=== Pagination ===*/
 ul.custom-pagination {
